--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico?" />
+    <meta
+      name="description"
+      content="Music finder - best and simple way to find lyrics of favorite songs."
+    />
     <title>Musixmatch: The World's Largest Lyrics Catalog</title>
   </head>
   <body>
